# statelock-opt

./: .gitignore  AGENTS.md  README.md  program.md  pyproject.toml
configs/: memory_policy.yaml
docs/: OPT_BUILD_LOG.md  OPT_ENGINE_CONTRACT_SKETCH.md  OPT_EVAL_STRATEGY.md  OPT_EXPERIMENT_REGISTRY.md  OPT_HARDENING_AUDIT.md  OPT_HYPOTHESES.md  OPT_MEMORY_HARDENING.md  OPT_PROOF.md  OPT_SHIP_PLAN.md  OPT_architecture.md  OPT_repo_snapshot.md  STATELOCK-OPT_SESSION_2026_03_11_CODEX_BOOTSTRAP.md  statelock_vision.md
evals/: dataset.jsonl  schema.json
memory/: bad_regions.yaml  failures.yaml  priors.yaml  runs.jsonl  tradeoffs.yaml
prompts/: base_system.txt
prompts/answer_style/: balanced.txt  concise.txt  evidence_first.txt
prompts/citation_mode/: concise_inline.txt  required_footnote.txt  required_inline.txt
prompts/refusal_mode/: answer_if_partial_with_warning.txt  cautious_missing_evidence.txt  strict_missing_evidence.txt
src/statelock_opt/: __init__.py  accept.py  assemble.py  constants.py  dedupe.py  distill.py  hypotheses.py  model_adapter.py  prompt_render.py  proposer.py  registry.py  replay.py  retrieve_lexical.py  run.py  scorer.py  signatures.py
state/candidates/candidate_0001/: memory_policy.yaml
state/candidates/proof_top_k_final_4/: retrieval.yaml
state/incumbent/: prompt_fragments.yaml  retrieval.yaml
tests/: test_experiment_registry.py  test_hardening_regressions.py  test_hypotheses.py
